2007-05-19  Claude Paroz  <claude@2xlibre.net>

	* teams.py: Don't pass utf-8 string to gettext.

2007-05-19  Claude Paroz  <claude@2xlibre.net>

	* l10n.py: Add encoding parameter to unicode function.
	* po: Add svn:ignore property.
	* templates/index.tmpl:
	* templates/language-release.tmpl:
	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/list-releases.tmpl:
	* templates/list-teams.tmpl:
	* templates/module.tmpl:
	* templates/people.tmpl:
	* templates/person.tmpl:
	* templates/release.tmpl:
	* templates/team.tmpl: Remove BOM from text files. Move http-equiv
	before title tag.

2007-05-19  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branch gtk-engines (gtk-engines-2-10).

2007-05-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Add new module gnome-subtitles in Extras.

2007-05-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Add new module banter in Extras.
	Add gstreamer modules in freedesktop.

2007-05-14  Claude Paroz  <claude@2xlibre.net>

	* templates/language-release-ui-stats-modules.tmpl: Remove unnecessary
	link when there is multiple po for one module.

2007-05-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Add new module empathy in Extras.

2007-05-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Add gstreamer modules.

2007-05-11  Claude Paroz  <claude@2xlibre.net>

	* teams.py: Sort release list on language team page.

2007-05-11  Claude Paroz  <claude@2xlibre.net>

	* templates/language-release-doc-stats-modules.tmpl:
	* templates/language-release-ui-stats-modules.tmpl: Download the po
	with the icon, go to module with the link.
	Fixes bug #400392.

2007-05-10  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in:
	* templates/language-release.tmpl:
	* templates/release.tmpl: Replace property name (type->status).
