@@ -1057,9 +1057,10 @@
     <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gtksourceview">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gtranslator">
     <branch id="HEAD"/>
