@@ -412,7 +412,7 @@
       <module id="gok"/>
     	<module id="gtk-engines" branch="gtk-engines-2-10"/>
       <module id="gtkhtml" branch="gnome-2-18"/>
-      <module id="gtksourceview"/>
+      <module id="gtksourceview" branch="gnome-2-18"/>
       <module id="gucharmap"/>
       <module id="libgnomekbd"/>
       <module id="libgnomeprint" branch="gnome-2-18"/>
