@@ -1,3 +1,8 @@
+2007-05-26  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: gtksourceview branched for 2.18.
+
 2007-05-19  Claude Paroz  <claude@2xlibre.net>
 
 	* teams.py: Don't pass utf-8 string to gettext.
